<resources>
    <string name="app_name">DVAC</string>
    <string name="change_password">Change Password</string>
    <string name="import_database">Import Database</string>
    <string name="export_database">Export Database</string>
    <string name="add_password">Add New Password</string>
    <string name="fetch_xml_format">Fetch XML Format</string>
    <string name="backdoor">QkFDS0RPT1I=</string>
    <string name="username">Username</string>
    <string name="delete">Delete</string>
    <string name="description">Description</string>
    <string name="password">Password</string>
    <string name="existing_password">Existing Password</string>
    <string name="new_password">New Password</string>
    <string name="fetch_xml">Fetch XML</string>
    <string name="login">Login</string>
    <string name="enter_password">Enter Password</string>
    <string name="register_password">Register Password</string>
    <string name="delete_password">Delete Password</string>
    <string name="register">Register</string>
    <string name="JafarPathan">An intentionally vulnerable Android application to demonstrate vulnerabilities in application components inspired from old sieve lab. By Jafar Pathan (https://github.com/zinja-coder). Legal Warning: This Damn Vulnerable Android Components (DVAC) APK is provided for educational and ethical purpose only. Users are solely responsible for ensuring compliance with all applicable laws and regulations, and the developer(s) disclaim any liability for misuse or damage cause by DVAC.</string>
    <string name="welcome_to_dvac">Welcome to DVAC!</string>
    <string name="go_to_github">Go to Github</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="open_drawer">open drawer</string>
    <string name="close_drawer">close drawer</string>
    <string name="vulnerabilities">Vulnerabilities</string>
</resources>