<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PasswordManagerActivity">

    <GridLayout
        android:id="@+id/btnLayouts"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal"
        android:rowCount="3"
        android:columnCount="2"
        android:orientation="horizontal"
        android:layout_marginTop="16dp">

        <Button
            android:id="@+id/btnAddPassword"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_margin="10dp"
            android:text="@string/add_password" />

        <Button
            android:id="@+id/btnExport"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_margin="10dp"
            android:text="@string/export_database" />

        <Button
            android:id="@+id/btnImport"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_margin="10dp"
            android:text="@string/import_database" />

        <Button
            android:id="@+id/btnChangePassword"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_margin="10dp"
            android:text="@string/change_password" />

        <Button
            android:id="@+id/btnFetchXml"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_margin="10dp"
            android:text="@string/fetch_xml_format" />

        <Button
            android:id="@+id/btnVulnerabilities"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_margin="10dp"
            android:text="@string/vulnerabilities" />

    </GridLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewPasswords"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/btnLayouts"
        android:layout_marginTop="16dp"
        android:layout_centerHorizontal="true"/>

    <!-- FloatingActionButton -->
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabOpenGitHub"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_margin="16dp"
        android:foreground="@drawable/face"
        android:background="#00FFFFFF"
        android:contentDescription="@string/go_to_github" />

</RelativeLayout>
