<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <EditText
        android:id="@+id/etCurrentPassword"
        android:hint="@string/existing_password"
        android:inputType="textPassword"
        android:layout_width="400dp"
        android:layout_height="50dp"
        android:paddingStart="20dp"
        android:layout_margin="16dp"
        android:background="@drawable/row_border" />

    <EditText
        android:id="@+id/etNewPassword"
        android:hint="@string/new_password"
        android:inputType="textPassword"
        android:layout_width="400dp"
        android:layout_height="50dp"
        android:paddingStart="20dp"
        android:layout_margin="16dp"
        android:background="@drawable/row_border"
        android:layout_below="@id/etCurrentPassword" />

    <Button
        android:id="@+id/btnChange"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/change_password"
        android:layout_below="@id/etNewPassword" />

    <!-- FloatingActionButton -->
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabOpenGitHub"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_margin="16dp"
        android:foreground="@drawable/face"
        android:contentDescription="@string/go_to_github"
        />


</RelativeLayout>
