<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="198dp"
        android:layout_height="102dp"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/row_border"
        android:src="@drawable/dvac" />
    <TextView
        android:id="@+id/welcomeRegister"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/welcome_to_dvac"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textSize="25sp" />

    <TextView
        android:layout_below="@id/welcomeRegister"
        android:id="@+id/welcomeIntro"
        android:layout_width="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:layout_gravity="center"
        android:text="@string/JafarPathan"
        android:textAlignment="center"
        android:layout_margin="20dp"
        android:textSize="15sp"
        android:background="@drawable/row_border"
        android:visibility="visible" />

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="382dp"
        android:layout_height="36dp"
        android:layout_below="@id/welcomeIntro"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/row_border"
        android:hint="@string/register_password"
        android:inputType="textPassword"
        android:paddingStart="20dp" />

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="258dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/editTextPassword"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        android:text="@string/register" />


</RelativeLayout>
